# openenv

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: __init__.py  labeling.py  pipeline.py  schema.py
graders/: __init__.py  llm_grader.py  qa_grader.py
scripts/: mock_openai_server.py
server/: app.py  environment.py
tasks/: __init__.py  base.py  easy.py  hard.py  medium.py
tests/: test_environment.py  test_grader.py  test_labeling.py
